--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -12,8 +12,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #027BE3
-$secondary : #26A69A
+$primary   : white
+$secondary : white
 $accent    : #9C27B0
 
 $dark      :  #0d0d0d
